--- a/app/.env
+++ b/app/.env
@@ -1,7 +1,8 @@
-DATABASE_URL="postgresql://role_a53f7d09:_tQx1uAwdjsgVf10NWaxxAPoue4laRYt@db-a53f7d09.db002.hosteddb.reai.io:5432/a53f7d09?connect_timeout=15"
+DATABASE_URL='postgresql://role_a53f7d09:_tQx1uAwdjsgVf10NWaxxAPoue4laRYt@db-a53f7d09.db002.hosteddb.reai.io:5432/a53f7d09?connect_timeout=15'
 AWS_PROFILE=hosted_storage
 AWS_REGION=us-west-2
 AWS_BUCKET_NAME=abacusai-apps-60489b261efb879fe22c0930-us-west-2
 AWS_FOLDER_PREFIX=3735/
-NEXTAUTH_SECRET="214vOb0bvYVaiAgFqArErXJACUO9F9Vv"
-ABACUSAI_API_KEY="cb1509e22e114322a2c5452adb7c381f"
+NEXTAUTH_SECRET=214vOb0bvYVaiAgFqArErXJACUO9F9Vv
+ABACUSAI_API_KEY=cb1509e22e114322a2c5452adb7c381f
+NEXTAUTH_URL=http://localhost:3000
