Fixed NEXTAUTH_URL for deployment

--- a/app/.env
+++ b/app/.env
@@ -5,4 +5,4 @@ AWS_BUCKET_NAME=abacusai-apps-60489b261efb879fe22c0930-us-west-2
 AWS_FOLDER_PREFIX=3735/
 NEXTAUTH_SECRET=214vOb0bvYVaiAgFqArErXJACUO9F9Vv
 ABACUSAI_API_KEY=cb1509e22e114322a2c5452adb7c381f
-NEXTAUTH_URL=http://localhost:3000
+NEXTAUTH_URL=https://gistlist.abacusai.app
