--- a/app/package.json
+++ b/app/package.json
@@ -70,6 +70,7 @@
     "@types/jsonwebtoken": "9.0.5",
     "@types/plotly.js": "2.35.5",
     "@types/react-plotly.js": "2.6.3",
+    "@types/stripe": "^8.0.417",
     "autoprefixer": "10.4.15",
     "bcryptjs": "2.4.3",
     "chart.js": "4.4.9",
@@ -109,7 +110,9 @@
     "react-select": "5.8.0",
     "react-use": "17.6.0",
     "recharts": "2.15.3",
+    "sharp": "^0.34.4",
     "sonner": "1.5.0",
+    "stripe": "^19.1.0",
     "swr": "2.2.4",
     "tailwind-scrollbar-hide": "1.1.7",
     "vaul": "0.9.9",
