Rebranded to Gister with new logo and premium pack updates

--- a/app/public/manifest.json
+++ b/app/public/manifest.json
@@ -1,7 +1,7 @@
 
 {
-  "name": "Gist List",
-  "short_name": "Gist List",
+  "name": "Gister",
+  "short_name": "Gister",
   "description": "AI-powered reselling assistant",
   "start_url": "/",
   "display": "standalone",
