--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -1,8 +1,8 @@
 {
   "manifest_version": 3,
-  "name": "Gist List - AI Reseller Assistant",
-  "version": "1.0.0",
-  "description": "Automate posting listings to multiple reselling platforms with AI-processed data",
+  "name": "Gister - AI Reseller Assistant",
+  "version": "2.0.0",
+  "description": "Automate posting listings to multiple reselling platforms with AI-powered scheduling and smart form filling",
   
   "permissions": [
     "storage",
@@ -28,7 +28,7 @@
   
   "action": {
     "default_popup": "popup/popup.html",
-    "default_title": "Gist List",
+    "default_title": "Gister",
     "default_icon": {
       "16": "assets/icon16.png",
       "32": "assets/icon32.png",
@@ -77,7 +77,7 @@
   
   "web_accessible_resources": [
     {
-      "resources": ["assets/*", "background/data-sync.js", "content-scripts/base-content-script.js"],
+      "resources": ["assets/*", "api/*", "background/data-sync.js", "content-scripts/base-content-script.js"],
       "matches": ["<all_urls>"]
     }
   ],
