Add Etsy API integration - complete Free 3 platforms

--- a/app/.env.example
+++ b/app/.env.example
@@ -12,7 +12,16 @@ STRIPE_PRO_PRICE_ID=price_pro_monthly
 # eBay API (Market Data & Auto-Listing) - Optional
 EBAY_CLIENT_ID=your_ebay_client_id
 EBAY_CLIENT_SECRET=your_ebay_client_secret
-EBAY_REDIRECT_URI=https://your-domain.com/api/ebay/callback
+EBAY_REDIRECT_URI=https://your-domain.com/api/marketplace/ebay/callback
+
+# Reverb API (Music Gear Marketplace) - Optional
+REVERB_CLIENT_ID=your_reverb_client_id
+REVERB_CLIENT_SECRET=your_reverb_client_secret
+
+# Etsy API (Handmade & Vintage Marketplace) - Optional
+ETSY_CLIENT_ID=your_etsy_keystring
+ETSY_CLIENT_SECRET=your_etsy_shared_secret
+ETSY_REDIRECT_URI=https://your-domain.com/api/marketplace/etsy/callback
 
 # Facebook Graph API (Marketplace Listing) - Optional
 FACEBOOK_ACCESS_TOKEN=your_facebook_access_token
