rebrand: rename Gister to GISTer across web app and extension

--- a/app/public/manifest.json
+++ b/app/public/manifest.json
@@ -1,7 +1,7 @@
 
 {
-  "name": "Gister",
-  "short_name": "Gister",
+  "name": "GISTer",
+  "short_name": "GISTer",
   "description": "AI-powered reselling assistant",
   "start_url": "/",
   "display": "standalone",
